--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -87,6 +87,7 @@
      <Compile Include="Assets\Scripts\UI Scripts\MainMenuUI.cs" />
      <Compile Include="Assets\Scripts\UI Scripts\SkinShopUI.cs" />
      <Compile Include="Assets\Scripts\Charector\Score.cs" />
+     <Compile Include="Assets\Scripts\UI Scripts\PlayerInfo.cs" />
      <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
      <None Include="Assets\PolygonPrototype\Shaders\Prototype_Glass_Global.shader" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
